# trashtalk-generator

./: Cargo.toml  config.toml
src/: cli.rs  main.rs
