[package]
name = "trashtalk-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
rand = "0.8.5"
random = "0.14.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
shuffle = "0.1.7"
toml = "0.8.19"
